[tool.poetry]
name = "get-proxies"
version = "0.1.0"
description = ""
authors = ["fastcode <fast.code.auth@gmail.com>"]
readme = "README.md"
packages = [{include = "get_proxies"}]

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.8.4"
loguru = "^0.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
